--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,14 @@
    },
    "files.autoSave": "off",
    "workbench.colorTheme": "Visual Studio Dark",
-   "editor.defaultFormatter": "HookyQR.beautify"
+   "editor.defaultFormatter": "HookyQR.beautify",
+   "python.testing.unittestArgs": [
+      "-v",
+      "-s",
+      "./controllers",
+      "-p",
+      "*_test.py"
+   ],
+   "python.testing.pytestEnabled": false,
+   "python.testing.unittestEnabled": true
 }
